--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="donation-list">
     <% @donations.each do |donation| %>
-      <div class="donation-each">
+      <div class="donation-each"  data-id ="<%=donation.id%>">
       	<div class="donation-image-container">
 	        <% if donation.images.attached? %>
 	            <%= image_tag(donation.images[0], :class => "donation-image") %>
@@ -13,8 +13,8 @@
         <div class="donation-text">
           <h2><%= donation.title %></h2>
           <p><%= donation.description %></p>
-          <p><%= link_to  "Ver Doação", controller: "donations", action: "show", id: donation.id %></p>
         </div>
       </div>
     <% end %>
+    <%= javascript_include_tag('index.js') %>
 </div>
