--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -10,18 +10,23 @@
 
 nav {
     background-color: var(--main-color);
+    background-image: linear-gradient(to top, #1d84b5, #288dbd, #3295c5, #3b9ece, #44a7d6);
     height: 5.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     padding-left: 2.5rem;
     font-weight: bold;
-    justify-content: space-between
+    -webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+    -moz-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+    box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+
 }
 
 nav div {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
     height: 100%;
 }
 
@@ -30,46 +35,57 @@ nav div {
     color: var(--main-white);
     font-size: 2.4rem;
     text-decoration:none;
-    margin-left: 5%;
+    margin-left: 3.5rem;
     margin-right: 0;
 }
 
-.nav-buttons {
-    color: var(--main-white);
-    text-decoration:none;
-}
-
-.nav-buttons:hover {
+.logo:hover {
     cursor: pointer;
     color: var(--main-white);
     background-color: transparent;
+
 }
 
-.nav-buttons:active {
+.logo:active {
     color: var(--main-white);
 }
 
-.nav-buttons:visited {
+.logo:visited {
     color: var(--main-white);
+}
+
     
-}
-
-.nav-page-buttons {
+.nav-buttons {
     background-color: transparent;
     outline: none;
+    display: block;
     border: none;
     color: var(--main-white);
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 0.8rem;
     display: inline-block;
-    width: 4.8rem;
+    /* width: 4.8rem; */
     transition: color 0.5s, background-color 0.5s;
-    height: 100%;
-
+    height: 5.5rem;
+    text-align: center;
+    text-decoration: none;
+    line-height: 5.5rem;
 }
 
-.nav-page-buttons:hover {
+.logged-options {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* width: 20rem; */
+    
+}
+
+.nav-buttons:visited {
+    color: var(--main-white);
+}
+
+.nav-buttons:hover {
     color: var(--main-color);
     background-color: var(--main-white);
     cursor: pointer;
@@ -84,30 +100,23 @@ nav div {
     margin: 0rem 1rem 0rem 1rem;
 }
 
-#profile {
-    /* justify-self: flex-end; */
-}
-
-
 .nav-buttons-list {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding: 0;
-    margin-left: 2em;
-    margin-right: 2em;
     height: 100%;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-left: 9rem;
+    width: 100%;
 }
-
 
 .donation-button {
     display: block;
     cursor: pointer;
     background-color: var(--main-white);
     color: var(--main-color);
+    font-family: 'Montserrat', sans-serif;
     outline: none;
     border-radius: 0.3rem;
     border: none;
@@ -118,26 +127,24 @@ nav div {
     padding-left: 2.4rem;
     padding-right: 2.4rem;
     text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
-    margin-top: auto;
-    margin-bottom: auto;
-
+    /* margin-right: 1.5rem; */
 }
 
-.form-button-pages {
-    color: red;
-    height: 100%;
-}
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-48 { font-size: 48px; }
 
-.form-button {
-    margin-left: auto;
-    margin-right: 1rem;
+
+.profile-icon {
+    color: white;
+    margin-right: 1rem; 
+    
 }
 
 .nav-search {
     font-family: 'Montserrat', sans-serif;
-    width: 15rem;
     height: 40px;
+    width: 30rem;
+    margin-left: 8rem;
     padding: 0.8rem;
     border-radius: 0.3rem 0 0 0.3rem;
     border-style: none;
@@ -150,6 +157,7 @@ nav div {
     width: 2rem;
     height: 40px;
     margin-top: auto;
+    margin-left: 0;
     margin-bottom: auto;
     border-radius: 0 0.3rem 0.3rem 0;
     border-style: none;
@@ -157,6 +165,10 @@ nav div {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.nav-button-search:focus {
+    outline:none
 }
 
 .nav-button-search:hover {
