--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -6,17 +6,22 @@
 
 </head>
 <nav>
-    <%= link_to "Doaki", root_path, :class => "logo nav-buttons" %>
+    <%= link_to "Doaki", root_path, :class => "logo" %>
     <div>
-        <input type="text" placeholder="O que voce quer?" class="nav-search"></input>
+        <input type="text" placeholder="O que está procurando?" class="nav-search">
         <button class="nav-button-search">
             <i class="material-icons search-icon">search</i>
         </button>
-        <ul class="nav-buttons-list">
-            <%= button_to "HOME", root_path, form_class: "form-button-pages", :class => "nav-buttons nav-page-buttons", :method => :get %>
-            <span class="separate">&nbsp</span>
-            <%= button_to "SOBRE", about_path, form_class: "form-button-pages", :class => "nav-buttons nav-page-buttons", :method => :get %>
-        </ul>
-        <%= button_to "DOAR", new_donation_path, form_class: "form-button", :class => "donation-button", :method => :get%>
     </div>
+        <ul class="nav-buttons-list">
+            <% if current_user %>
+                <%= button_to "DOAR", new_donation_path, form_class: "form-button", :class => "donation-button", :method => :get%>
+                <i class="material-icons md-36 profile-icon">account_circle</i>
+            <% else %>
+                <%= link_to "Sign Up", signup_path, :class => "nav-buttons sing-up" %>
+                <span class="separate">&nbsp</span>
+                <%= link_to "Log in", login_path, :class => "nav-buttons sing-up" %>
+            <% end %>
+        </ul>
 </nav>
+
