--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -65,7 +65,7 @@ nav div {
     font-weight: bold;
     font-size: 0.8rem;
     display: inline-block;
-    /* width: 4.8rem; */
+    width: 4.8rem;
     transition: color 0.5s, background-color 0.5s;
     height: 5.5rem;
     text-align: center;
@@ -108,8 +108,8 @@ nav div {
     padding: 0;
     height: 100%;
     margin-left: 9rem;
-    width: 100%;
 }
+
 
 .donation-button {
     display: block;
@@ -127,7 +127,6 @@ nav div {
     padding-left: 2.4rem;
     padding-right: 2.4rem;
     text-decoration: none;
-    /* margin-right: 1.5rem; */
 }
 
 .material-icons.md-18 { font-size: 18px; }
@@ -136,8 +135,8 @@ nav div {
 
 .profile-icon {
     color: white;
-    margin-right: 1rem; 
-    
+    /* margin-right: 1rem;  */
+    margin-left: auto;
 }
 
 .nav-search {
