--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -8,10 +8,11 @@
 	max-width: 500px;
     font-family: 'Montserrat', sans-serif;
     padding: 20px 12px 10px 20px;
-    border: 3px solid var(--main-color);
-    border-radius: 5px;
+    border: 5px solid var(--main-color);
+    border-radius: 3.5px;
     margin-right: auto;
-    margin-left: auto; 
+	margin-left: auto; 
+	margin-top: 1.5rem;
     display: flex;
     flex-direction: column;
 }
@@ -83,7 +84,7 @@ input[type='file'] {
 }
 
 .file-button {
-	width: 25%;
+	width: 15%;
 	font-size: 18px;
 	text-align: center;
 	font-family: 'Montserrat', sans-serif;
@@ -104,7 +105,7 @@ input[type='file'] {
 
 .input-file {
 	font-family: 'Montserrat', sans-serif;
-	width: 72%;
+	width: 82%;
 	box-sizing: border-box;
 	border: 1px solid #C2C2C2;
 	border-radius: 3px;
