--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,7 +17,9 @@
             <% if current_user %>
                 <!-- <%= button_to "DOAR", new_donation_path, form_class: "form-button", :class => "logged donation-button", :method => :get%> -->
                 <%= link_to 'Log Out', logout_path, :class => "nav-buttons" %>
-                <i class="material-icons md-36 profile-icon">account_circle</i>
+                <span id="teste">
+                    <i class="material-icons md-36 profile-icon">account_circle</i>
+                </span>
             <% else %>
                 <%= link_to "Sign Up", signup_path, :class => "nav-buttons sing-up" %>
                 <span class="separate">&nbsp</span>
