--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true, class: "form") do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -12,21 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.label :email, :class => "label-text" %>
+    <%= form.text_field :email, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
   <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
+    <%= form.label :password, :class => "label-text" %>
+    <%= form.password_field :password, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
   <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
+    <%= form.label :password_confirmation, :class => "label-text" %>
+    <%= form.password_field :password_confirmation, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions label submit-label">
+    <%= form.submit "Submit", :class => "submit-button" %>
   </div>
 <% end %>
