--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New User</h1>
+<%= render partial: "shared/nav" %>
+<h1 class="form-title">Crie sua conta</h1>
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
