--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,6 +1,8 @@
 <style>
 
 </style>
+<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <%= form_with(model: donation, local: true, class: "form") do |form| %>
@@ -70,7 +72,6 @@
       <i class="material-icons">
         done
       </i>
-      <%= form.submit %>
     </button>
   </div>
 
