--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -14,9 +14,18 @@
 	margin-left: auto; 
 	margin-top: 1.5rem;
     display: flex;
-    flex-direction: column;
+	flex-direction: column;
+	-webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+    -moz-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+    box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
 }
 
+
+.form-users {
+	background-color: rgb(240, 240, 240);
+    border: 1px solid rgb(230, 230, 230);
+
+}
 .label {
 	display: flex;
 	flex-direction: column;
