--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -63,7 +63,7 @@ nav div {
     color: var(--main-white);
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 0.8rem;
+    font-size: 0.86rem;
     display: inline-block;
     width: 4.8rem;
     transition: color 0.5s, background-color 0.5s;
@@ -169,7 +169,9 @@ nav div {
     border-style: none;
     margin-top: auto;
     margin-bottom: auto;
-    background-color: var(--main-white);
+    /* background-color: var(--main-white); */
+    background-color: white;
+    outline: none;
 }
 
 .nav-button-search {
@@ -180,7 +182,7 @@ nav div {
     margin-bottom: auto;
     border-radius: 0 0.3rem 0.3rem 0;
     border-style: none;
-    background-color: var(--main-white);
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
