--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -4,11 +4,11 @@
 .form-title {
 	text-align: center;
 	font-family: 'Montserrat', sans-serif;
+	font-family: 'Kanit', sans-serif;
 	color: #1D84B5;
 	margin-bottom: 0;
-	margin-top: 10px;	
-	font-size: 30px;
-	margin-top: 1.5rem;
+	font-size: 40px;
+	margin-top: 2.4rem;
 
 }
 
