--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true, class: "form") do |form| %>
+<%= form_with(model: user, local: true, class: "form form-users") do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -26,7 +26,11 @@
     <%= form.password_field :password_confirmation, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
-  <div class="actions label submit-label">
-    <%= form.submit "Submit", :class => "submit-button" %>
+  <div class="label submit-label">
+      <button class="submit-button">
+      <i class="material-icons">
+        done
+      </i>
+    </button>
   </div>
 <% end %>
