--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -12,7 +12,7 @@
     border-radius: 3.5px;
     margin-right: auto;
 	margin-left: auto; 
-	margin-top: 1.5rem;
+	margin-top: 4rem;
     display: flex;
 	flex-direction: column;
 	-webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
@@ -23,7 +23,8 @@
 
 .form-users {
 	background-color: rgb(240, 240, 240);
-    border: 1px solid rgb(230, 230, 230);
+	border: 1px solid rgb(230, 230, 230);
+	max-width: 400px;
 
 }
 .label {
