--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "shared/nav" %>
-<h1 class="form-title">Crie sua conta</h1>
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
 <%= render 'form', user: @user %>
 
