--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -15,19 +15,27 @@ nav {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 2.5rem;
+    justify-content: space-between;
     font-weight: bold;
     -webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
     -moz-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
     box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
-
 }
 
 nav div {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    justify-content: center;
     height: 100%;
+    width: 30%;
+}
+
+.nav-search-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+    margin: 0;
 }
 
 .logo {
@@ -35,8 +43,8 @@ nav div {
     color: var(--main-white);
     font-size: 2.4rem;
     text-decoration:none;
-    margin-left: 3.5rem;
-    margin-right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .logo:hover {
@@ -104,10 +112,12 @@ nav div {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0;
     height: 100%;
-    margin-left: 9rem;
+    width: 20%;
+    margin: 0;
+    /*margin-left: 9rem;*/
 }
 
 
@@ -163,7 +173,6 @@ nav div {
     font-family: 'Montserrat', sans-serif;
     height: 40px;
     width: 30rem;
-    margin-left: 8rem;
     padding: 0.8rem;
     border-radius: 0.3rem 0 0 0.3rem;
     border-style: none;
