--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -7,12 +7,12 @@
 .form {
 	max-width: 500px;
     font-family: 'Montserrat', sans-serif;
-    padding: 20px 12px 10px 20px;
-    border: 5px solid var(--main-color);
+    padding: 1rem;
     border-radius: 3.5px;
     margin-right: auto;
 	margin-left: auto; 
-	margin-top: 4rem;
+	margin-bottom: 2rem;
+	margin-top: 2rem;
     display: flex;
 	flex-direction: column;
 	-webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
@@ -20,6 +20,12 @@
     box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
 }
 
+.form-title {
+	text-align: center;
+	color: var(--main-color);
+	font-size: 2rem;
+	font-family: 'Montserrat', sans-serif;
+}
 
 .form-users {
 	background-color: rgb(240, 240, 240);
@@ -27,6 +33,7 @@
 	max-width: 400px;
 
 }
+
 .label {
 	display: flex;
 	flex-direction: column;
@@ -64,7 +71,9 @@
 }
 
 .submit-label {
-	align-items: center;
+	display: flex;
+	justify-content: center;
+	width: 100%;
 }
 
 .submit-button {
@@ -72,7 +81,7 @@
 	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
 	border: none;
-	padding: 8px 15px 8px 15px;
+	padding: 0.3rem 0 0.3rem 0;
 	background: var(--main-color);
 	color: var(--main-background-color);
 	box-shadow: 1px 1px 4px #EBEBEB;
@@ -94,6 +103,7 @@ input[type='file'] {
 }
 
 .file-button {
+	height: 90%;
 	width: 15%;
 	font-size: 18px;
 	text-align: center;
@@ -106,6 +116,8 @@ input[type='file'] {
     background-color: var(--main-color);
 	color: var(--main-background-color);
 	float: right;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .file-button:hover {
