--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -3,11 +3,6 @@
   --main-white: #F6F6FF;
 }
 
-.form-button {
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
 nav {
     background-color: var(--main-color);
     background-image: linear-gradient(to top, #1d84b5, #288dbd, #3295c5, #3b9ece, #44a7d6);
@@ -22,11 +17,11 @@ nav {
     box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
 }
 
-nav div {
+.nav-logo {
     display: flex;
     justify-content: center;
     height: 100%;
-    width: 30%;
+    width: 20%;
 }
 
 .nav-search-bar {
@@ -85,8 +80,6 @@ nav div {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* width: 20rem; */
-    
 }
 
 .nav-buttons:visited {
@@ -115,56 +108,29 @@ nav div {
     justify-content: center;
     padding: 0;
     height: 100%;
-    width: 20%;
+    width: 30%;
     margin: 0;
-    /*margin-left: 9rem;*/
 }
-
-
-.donation-button {
-    display: block;
-    cursor: pointer;
-    background-color: var(--main-white);
-    color: var(--main-color);
-    font-family: 'Montserrat', sans-serif;
-    outline: none;
-    border-radius: 0.3rem;
-    border: none;
-    height: 3.1rem;
-    font-weight: bold;
-    font-style: none;
-    font-size: 1.3rem;
-    padding-left: 2.4rem;
-    padding-right: 2.4rem;
-    text-decoration: none;
-}
-
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-48 { font-size: 48px; }
-
 
 .profile-icon {
     color: var(--main-white);
     box-sizing: border-box;
-    margin-left: auto;
     margin: 0;
     cursor: pointer;
-
 }
 
 .profile-icon:hover {
     color: var(--main-color);
-    margin-left: auto;
 }
 
-#teste {
+.profile-span {
     border-radius: 50%;
     box-sizing: border-box;
     height: 36px;
     padding: 0;
 }
 
-#teste:hover {
+.profile-span:hover {
     transition: background-color 0.5s;    
     background-color: var(--main-white);
 }
@@ -178,7 +144,6 @@ nav div {
     border-style: none;
     margin-top: auto;
     margin-bottom: auto;
-    /* background-color: var(--main-white); */
     background-color: white;
     outline: none;
 }
