--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -1,18 +1,64 @@
 :root {
+	--main-color: #1D84B5;
+	--main-hover-color: #34699a;
+	--main-background-color: #F6F6FF;
 }
 
-.form-title {
+.login-form {
+	max-width: 500px;
+    font-family: 'Montserrat', sans-serif;
+    padding: 1rem;
+    border-radius: 3.5px;
+    margin-right: auto;
+	margin-left: auto; 
+	margin-bottom: 2rem;
+	margin-top: 2rem;
+    display: flex;
+	flex-direction: column;
+	-webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+    -moz-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+    box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+}
+
+.login-form-title-user {
 	text-align: center;
 	color: var(--main-color);
-	margin-bottom: 0;
-	font-size: 40px;
-
-	font-family: 'Raleway', sans-serif;
+	font-size: 2rem;
+	font-family: 'Montserrat', sans-serif;
 }
 
-.form-title-user {
-	font-size: 20px;
-	color: rgb(88, 88, 88);
+.label {
+	display: flex;
+	flex-direction: column;
+	margin: 0 0 15px 0;
+}
+
+.label-text {
+	font-weight: bold;
+	padding-top: 8px;
+	padding-right: 5px;
+}
+
+.input-field {
+	font-family: 'Montserrat', sans-serif;
+	width: 100%;
+	max-width: 100%;
+	min-width: 100%;
+	box-sizing: border-box;
+	border: 1px solid #C2C2C2;
+	border-radius: 3px;
+	padding: 7px;
+	outline: none;
+	border-top-style: none;
+	border-left-style: none;
+	border-right-style: none;
+	height: 37px;
+}
+
+.submit-label {
+	display: flex;
+	justify-content: center;
+	width: 100%;
 }
 
 .div-back-button {
