--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,10 @@
  *= require material_icons
  */
 
+ * {
+     box-sizing: border-box;
+ }
+
 :root {
     --main-color: #1D84B5; 
     --main-white: rgb(236, 236, 236);
@@ -23,28 +27,4 @@
 body, html {
     margin: 0;
     background-color: var(--main-white);
-    /* padding: 0; */
-}
-
-.donation-image-form {
-    width:100px;
-    height: 100px;
-    border: solid 2px rgb(250, 250, 250);
-    border-radius: 4px;
-    margin: 0px 2px;
-}
-
-.image-container-form {
-    margin-top: 6px;
-    padding: 5px;
-    padding-left: 7px;
-    background-color: #1D84B5;
-    border-radius: 7px;
-}
-
-.edit-title {
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    color: var(--main-color);
-    margin-bottom: 5px;
 }
