--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -4,6 +4,29 @@
 	--main-background-color: #F6F6FF;
 }
 
+.donation-image-form {
+    width:100px;
+    height: 100px;
+    border: solid 2px rgb(250, 250, 250);
+    border-radius: 4px;
+    margin: 0px 2px;
+}
+
+.image-container-form {
+    margin-top: 6px;
+    padding: 5px;
+    padding-left: 7px;
+    background-color: #1D84B5;
+    border-radius: 7px;
+}
+
+.edit-title {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    color: var(--main-color);
+    margin-bottom: 5px;
+}
+
 .form {
 	max-width: 500px;
     font-family: 'Montserrat', sans-serif;
