--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -74,69 +74,4 @@
 
 <%end%>
 
-<script>
-  // function readURL(input) {
-  //     if (input.files && input.files[0]) {
-  //         let reader = new FileReader();
-  //         // <div class="image-container-form">
-  //           // <img src="" alt="" class="donation-image-form">
-  //         // </div>
-  //         let container = `
-  //               <img src='' alt='' class='donation-image-form'>
-  //         `
-  //         $(".image-container-form").append(container)
-          
-  //         reader.onload = function (e) {
-  //             console.log(input.files[0])
-  //             $('.donation-image-form').attr('src', e.target.result);
-  //         }
-
-  //         reader.readAsDataURL(input.files[0]);
-  //     }
-  // }
-$(function() {
-    // Multiple images preview in browser
-    var imagesPreview = function(input, placeToInsertImagePreview) {
-        if (input.files) {
-            var filesAmount = input.files.length;
-
-            for (i = 0; i < filesAmount; i++) {
-                var reader = new FileReader();
-
-                reader.onload = function(event) {
-                    $($.parseHTML('<img>')).attr('src', event.target.result).appendTo(placeToInsertImagePreview).attr('class', 'donation-image-form');
-                }
-
-                reader.readAsDataURL(input.files[i]);
-            }
-        }
-
-    };
-
-    let divContainer = `<div class="image-container-form">
-                        </div>
-                        `
-    $('.file-field').on('change', function() {
-      console.log('changed')
-      $(divContainer).insertAfter('.file-field')
-    })
-    $('.file-field').on('change', function() {
-        imagesPreview(this, '.image-container-form');
-    });
-});
-
-
-  // $(".file-field").change(function(){
-      // readURL(this);
-  // });
-
-
-  $('.file-button').on('click', function() {
-    $('.file-field').trigger('click');
-  });
-
-  $('.file-field').on('change', function() {
-    var fileName = $(this)[0].files[0].name;
-    $('#file').val(fileName);
-  });
-</script>
+<%= javascript_include_tag('newDonation.js') %>
