--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -63,7 +63,7 @@
 	border-top-style: none;
 	border-left-style: none;
 	border-right-style: none;
-	height: 37px;
+	height: 2.2rem;
 }
 
 .input-field:focus {
