--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -22,12 +22,14 @@
             <%= link_to 'Log Out', logout_path, :class => "nav-buttons" %>
             <span class="separate">&nbsp</span>
             <span class="profile-span">
-                <i class="material-icons md-36 profile-icon">account_circle</i>
+                <%= link_to user_path(current_user.id), :class => "profile-hyperlink" do %>
+                    <i class="material-icons md-36 profile-icon">account_circle</i>
+                <% end %>
             </span>
         <% else %>
             <%= link_to "Sign Up", signup_path, :class => "nav-buttons sing-up" %>
             <span class="separate">&nbsp</span>
-            <%= link_to "Log in", login_path, :class => "nav-buttons sing-up" %>
+            <%= link_to "Login", login_path, :class => "nav-buttons sing-up" %>
         <% end %>
     </ul>
 </nav>
