Adds script tag importing jquery in the right file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 	        <% end%>
       	</div>
         <div class="donation-text">
-          <h2><%= donation.title %></h2>
+          <h1 class = "donation-title"><%= donation.title %></h2>
           <p><%= donation.description %></p>
         </div>
       </div>
