--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,13 +3,30 @@
   --main-white: #F6F6FF;
 }
 
-h1 {
-	color: var(--main-color);
+.donation-text {
+	max-height: 70%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.donation-title {
+	margin-top: 0.7rem;
+	margin-bottom: 0.7rem;
+	height: 10%;
 	text-align: center;
-	font-size: 3rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+/* .donation-title {
+	text-align: center;
+	font-size: 1rem;
 	margin: 0;
 	padding: 1rem;
-}
+} */
 
 .donation-list {
 	width: 100%;
@@ -23,9 +40,10 @@ h1 {
 }
 
 .donation-each {
-	width: 20%;
+	width: 20rem;
 	height: 23rem;
 	padding: 1rem;
+	margin: 1em;
 	border: solid 0.1rem var(--main-color);
 	border-radius: 0.3rem;
 	display: flex;
@@ -54,23 +72,6 @@ h1 {
 	height: 100%;
 }
 
-.donation-text {
-	max-height: 70%;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
-.donation-text h2 {
-	margin-top: 0.7rem;
-	margin-bottom: 0.7rem;
-	height: 10%;
-	text-align: center;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
 
 .donation-text p {
 	margin-top: 0;
