Show user style

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -86,7 +86,7 @@
 	border-top-style: none;
 	border-left-style: none;
 	border-right-style: none;
-	height: 2.2rem;
+	height: 37px;
 }
 
 .input-field:focus {
