--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -1,8 +1,16 @@
 :root {
     --container-background: rgb(255, 255, 255);
     --border-radius-container: 0.3rem;
-    
+    --main-color: #1D84B5;
 }
+
+.shadow {
+    -webkit-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
+    -moz-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
+    box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
+}
+
+/* Donation-Show */
 
 .container {
     display: flex;
@@ -73,5 +81,51 @@
 
 .description {
     line-height: 1.3rem;
+}
 
+/* Donation-User */
+
+p {
+    margin: 0;
+}
+
+.user-show-container {
+    width: 25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 0.15rem solid var(--main-color);
+    margin: 2rem auto 2rem auto;
+    border-radius: var(--border-radius-container);
+    font-family: 'Montserrat', sans-serif;
+}
+
+.icon {
+    color: var(--main-color);
+    font-size: 10rem!important;
+}
+
+.user-show-title {
+    color: var(--main-color);
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+.information {
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 1rem;
+    margin-top: 1rem;
+}
+
+.edit-user-button {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0.1rem solid var(--main-color);
+    padding: 0.5rem;
+    border-radius: 1rem;
+    text-decoration: none;
 }
