Adds a belongs_to user in Donation and has_many donations in User

--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -2,7 +2,8 @@
 
 <h1 class="edit-title">Editing Donation</h1>
 
-<%= render 'form', donation: @donation %>
-
-<%= link_to 'Show', @donation %> |
-<%= link_to 'Back', donations_path %>
+<% if current_user && @donation.user.id == current_user.id %>
+	<%= render 'form', donation: @donation %>
+	<%= link_to 'Show', @donation %> |
+	<%= link_to 'Back', donations_path %>
+<% end %>
