--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -4,6 +4,8 @@
 	--main-background-color: #F6F6FF;
 }
 
+/* Estilo do formulario para login */
+
 .login-form {
 	max-width: 20rem;
     font-family: 'Montserrat', sans-serif;
@@ -73,3 +75,6 @@
     -moz-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
     box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
 }
+
+/* Estilo para a mensagem de alerta de usuario nao logado */
+
