--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,3 +1,13 @@
 <%= render partial: "shared/nav" %>
 
-<%= render 'form', donation: @donation %>
+<% if current_user %>
+	<%= render 'form', donation: @donation %>
+<% else %>
+	<div class="not-logged-cont">
+		<h1 class="not-logged-msg">Faca seu login primeiro</h1>
+		<div class="not-logged-buttons">
+			<%= link_to "Sign Up", signup_path, :class => "not-logged-signin" %>
+			<%= link_to "Login", login_path, :class => "not-logged-login" %>
+		</div>
+	</div>
+<% end %>
