Adds variable to form titles and corrects donation#show

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: donation, local: true, class: "form") do |form| %>
 
-  <h1 class="form-title">Crie sua Doação</h1>
+  <h1 class="form-title"><%= @formTitle %></h1>
 
   <% if donation.errors.any? %>
     <div id="error_explanation">
