--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -11,6 +11,14 @@
 }
 
 /* Donation-Show */
+.no-image {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    height: 22rem;
+    width: 22rem;
+}
 
 .container {
     display: flex;
@@ -19,30 +27,32 @@
     margin-left: 2rem;
     border-collapse: collapse;
     align-items: stretch;
+    flex
+
 }
 
 .photo-container {
     background-color: var(--container-background);
     padding-top: 3rem;
-    padding-bottom: 3rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
     flex-grow: 1;
+    padding-bottom: 2rem;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
     flex-wrap: wrap;
     border-right: solid 1px #EAEBED;
     border-radius: var(--border-radius-container);
-    flex-basis: 30rem;
+    height: 27rem;  
     display: flex;
-    flex-direction: row;
-
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .photo {
     -webkit-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
     -moz-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
     box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
-    width: 20rem;
-    height: 14rem;
     margin: 0 0 1rem 1rem;
     border-radius: 1.1rem;
     flex-grow: 1;
@@ -50,25 +60,30 @@
     -khtml-user-drag: none;
     -moz-user-drag: none;
     -o-user-drag: none;
-    
+    width: 34rem;
+    /* height: 30rem; */
+    /* height: 30%; */
 }
 
 .container-infos {
     display: flex;
+    width: 50%;
     flex-direction: column;
     font-family: 'Source Sans Pro', sans-serif;
-    flex-grow: 1;
     padding-left: 3.5rem;
     padding-top: 3rem;
     background-color: var(--container-background);
     border-radius: var(--border-radius-container);
     padding-right: 1.5rem;
+    height: 27rem;  
+    overflow: auto;
 }
 
 .title-donation {
     font-size: 3rem;
     margin: 0;
     margin-bottom: 1rem;
+    line-height: normal;
 }
 
 .infos-donation {
