--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -51,7 +51,7 @@
     -webkit-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
     -moz-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
     box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
-    margin: 0 0 1rem 1rem;
+    margin: 1rem;
     border-radius: 1.1rem;
     flex-grow: 1;
     -webkit-user-drag: none;
