Validates images extesion

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -26,7 +26,7 @@
   <div class="label">
     <%= form.label :images, :class => "label-text" %>
     <div class="file-label">
-      <input type="text" name="file" id="file" class="input-file" placeholder="Arquivo" 
+      <input type="text" name="file" id="file" class="input-file" placeholder="Para selecionar múltiplas imagens, utilize a tecla shift" 
       readonly="readonly">
       <label class="file-button">
         <i class="material-icons">
