--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,9 @@
       	</div>
         <div class="donation-text">
           <h1 class = "donation-title"><%= donation.title %></h2>
-          <p><%= donation.description %></p>
+          <div class="donation-description">
+            <p><%= donation.description %></p>
+          </div>
         </div>
       </div>
     <% end %>
