--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -1,6 +1,8 @@
 :root {
     --container-background: rgb(255, 255, 255);
     --border-radius-container: 0.3rem;
+    --main-background-color: #F6F6FF;
+    --main-hover-color: #34699a;
     --main-color: #1D84B5;
 }
 
@@ -96,13 +98,14 @@
     line-height: 1.3rem;
 }
 
+/* User - Show */
+
 .user-show-container {
     width: 25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 0.15rem solid var(--main-color);
     margin: 2rem auto 2rem auto;
     border-radius: var(--border-radius-container);
     font-family: 'Montserrat', sans-serif;
@@ -116,23 +119,34 @@
 .user-show-title {
     color: var(--main-color);
     font-size: 2.5rem;
-    margin-bottom: 1rem;
 }
 
 .information {
     width: 75%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 1rem;
     margin-top: 1rem;
 }
 
 .edit-user-button {
     margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0.1rem solid var(--main-color);
     padding: 0.5rem;
     border-radius: 1rem;
     text-decoration: none;
+    color: var(--main-background-color)!important; /* ?????? */
+    background-color: var(--main-color);
+}
+
+.edit-user-button:hover {
+    background: var(--main-hover-color);
+    cursor: pointer;
+}
+
+.user-donations {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
 }
