--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,12 +19,12 @@
   </div>
 
   <div class="label">
-    <%= form.label :password, :class => "label-text" %>
+    <%= form.label @userPw, :class => "label-text" %>
     <%= form.password_field :password, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
   <div class="label">
-    <%= form.label :password_confirmation, :class => "label-text" %>
+    <%= form.label @userPwConfirmation, :class => "label-text" %>
     <%= form.password_field :password_confirmation, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
