Starts css for user-show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,37 @@
 <%= render partial: "/shared/nav" %>
 
-<!-- <p id="notice"><%= notice %></p> -->
-
 <div class="user-show-container">
 	<i class="material-icons icon">person</i>
 	<span class="user-show-title">Suas informações</span>
 	<div class="information">
 		<span>Email: <%= @user.email %></span>
 	</div>
-	<%= link_to 'Editar informações', edit_user_path(@user), class: "edit-user-button" %>
-	<span class="user-show-title">Suas doações</span>
+	<%= link_to 'Editar', edit_user_path(@user), class: "edit-user-button" %>
+	<span class="user-show-title margin-bottom-title">Suas doações</span>
 </div>
 <div class="user-donations">
 	<% if current_user %>
-		<% current_user.donations.each do |donation| %>
-			<span><%= donation.title %></span><br>
-			<span><%= donation.description %></span>
+		<% if current_user.donations.length == 0 %>
+			<span class="no-donations-msg">Não há doações feitas por você...</span>
+		<% else %>
+			<% current_user.donations.each do |donation| %>
+				<div class="user-donation" data-id ="<%=donation.id%>">
+					<div class="us-don-image-container">
+				        <% if donation.images.attached? %>
+				            <%= image_tag(donation.images[0], :class => "us-don-image") %>
+				        <% else %>
+				          <%= image_tag("picture", :class => "us-don-no-image") %>
+				        <% end%>
+			      	</div>
+			        <div class="us-don-text">
+				        <h1 class = "us-don-title"><%= donation.title %></h2>
+				        <div class="us-don-description">
+				            <p><%= donation.description %></p>
+				        </div>
+			        </div>
+				</div>
+			<% end %>
 		<% end %>
 	<% end %>
+	<%= javascript_include_tag('index.js') %>
 </div>
