--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -59,8 +59,9 @@
 }
 
 .donation-image-container {
-	width: 100%;
-	height: 50%;
+	width: 90%;
+	margin: auto;
+	height: 55%;
 	display: flex;
 	justify-content: center;
 }
@@ -75,6 +76,6 @@
 	height: 100%;
 }
 
-
-
-
+.form-title-signup {
+	color: rgb(71, 71, 71);
+}
