--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -26,6 +26,7 @@
 .title-user {
 	text-align: center;
 	color: var(--main-color);
+	color: rgb(71, 71, 71);
 	font-size: 2rem;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -68,13 +69,23 @@
 	font-family: 'Montserrat', sans-serif;
 	border: none;
 	padding: 0.3rem 0 0.3rem 0;
-	background: var(--main-color);
+	background-color: var(--main-color);
 	color: var(--main-background-color);
 	border-radius: 20px;
 	-webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
     -moz-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
-    box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
+	box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
 }
 
-/* Estilo para a mensagem de alerta de usuario nao logado */
+.login-button:hover {
+	background-color: var(--main-hover-color);
+}
 
+/* Estilo do formulario para signup */
+.form-title-signup {
+	color: rgb(71, 71, 71);
+}
+
+.form-signup {
+	width: 30%;
+}
