--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: user, local: true, class: "form") do |form| %>
-   <h1 class="form-title"><%= @formTitle %></h1>
+<%= form_with(model: user, local: true, class: "form form-signup") do |form| %>
+   <h1 class="form-title form-title-signup"><%= @formTitle %></h1>
 
   <% if user.errors.any? %>
     <div id="error_explanation">
