Fix what the other idiot developer made

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -40,6 +40,12 @@
     padding: 1.5rem;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    height: 27rem;  
+    align-items: flex-start;
+    overflow-y: auto;
+    overflow-x: auto;
+
 }
 
 .photo {
