--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -1,6 +1,6 @@
 :root {
   --main-color: #1D84B5; 
-  --main-white: #F6F6FF;
+  --main-background-color: #F6F6FF;
 }
 
 nav {
@@ -35,7 +35,7 @@ nav {
 
 .logo {
     font-family: 'ZCOOL KuaiLe', cursive;
-    color: var(--main-white);
+    color: var(--main-background-color);
     font-size: 2.4rem;
     text-decoration:none;
     margin-top: auto;
@@ -44,17 +44,17 @@ nav {
 
 .logo:hover {
     cursor: pointer;
-    color: var(--main-white);
+    color: var(--main-background-color);
     background-color: transparent;
 
 }
 
 .logo:active {
-    color: var(--main-white);
+    color: var(--main-background-color);
 }
 
 .logo:visited {
-    color: var(--main-white);
+    color: var(--main-background-color);
 }
 
     
@@ -63,7 +63,7 @@ nav {
     outline: none;
     display: block;
     border: none;
-    color: var(--main-white);
+    color: var(--main-background-color);
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 0.86rem;
@@ -83,17 +83,17 @@ nav {
 }
 
 .nav-buttons:visited {
-    color: var(--main-white);
+    color: var(--main-background-color);
 }
 
 .nav-buttons:hover {
     color: var(--main-color);
-    background-color: var(--main-white);
+    background-color: var(--main-background-color);
     cursor: pointer;
 }
 
 .separate {
-    color: var(--main-white);
+    color: var(--main-background-color);
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     border-left: solid white 0.1rem;
@@ -113,7 +113,7 @@ nav {
 }
 
 .profile-icon {
-    color: var(--main-white);
+    color: var(--main-background-color);
     box-sizing: border-box;
     margin: 0;
     cursor: pointer;
@@ -132,7 +132,7 @@ nav {
 
 .profile-span:hover {
     transition: background-color 0.5s;    
-    background-color: var(--main-white);
+    background-color: var(--main-background-color);
 }
 
 .profile-hyperlink:hover {
