--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -5,7 +5,6 @@
 }
 
 /* Estilo do formulario para login */
-
 .login-form {
 	max-width: 20rem;
     font-family: 'Montserrat', sans-serif;
@@ -88,4 +87,41 @@
 
 .form-signup {
 	width: 30%;
+}
+
+/* Estilo para a mensagem de 'usuario nao conectado' no new donation */
+
+.not-logged-cont {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	margin-top: 2rem;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.not-logged-msg {
+	color: var(--main-color);
+	font-size: 3rem;
+}
+
+.not-logged-buttons {
+	width: 25%;
+	margin: 0 auto 0 auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.not-logged-button {
+	font-size: 1.2rem;
+	padding: 0.8rem;
+	border-radius: 0.8rem;
+	color: var(--main-background-color);
+	background-color: var(--main-color);
+}
+
+.not-logged-button:hover {
+	background-color: var(--main-hover-color);
 }
