--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -150,22 +150,25 @@
 
 .user-donations {
     width: 100%;
-    margin: 0;
+    margin: 1rem 0 1rem 0;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     flex-wrap: wrap;
     font-family: 'Montserrat', sans-serif;
-    justify-content: space-around;
-    margin-bottom: 2rem;
+}
+
+.user-donation-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .user-donation {
     width: 18rem;
     height: 23rem;
     padding: 1rem;
-    margin: 1em;
     background-color: white;
-    border-radius: 0.3rem;
+    border-radius: 0.3rem 0.3rem 0 0;
     display: flex;
     flex-direction: column;
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
@@ -228,4 +231,37 @@
 
 a {
     text-decoration: none;
+}
+
+.us-don-options {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.us-don-button {
+    width: 50%;
+    margin: 0;
+    padding: 0.3rem;
+    color: var(--main-background-color);
+    text-align: center;
+}
+
+.button-edit {
+    background-color: var(--main-color);
+    border-bottom-left-radius: 0.3rem;
+}
+
+.button-edit:hover {
+    background-color: var(--main-hover-color);
+}
+
+.button-delete {
+    background-color: #fe4141;
+    border-bottom-right-radius: 0.3rem;
+}
+
+.button-delete:hover {
+    background-color: #cf3232;
 }
