Repairs in user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
 					<% end %>
 		        	<div class="us-don-options">
 		        		<%= link_to 'Editar', edit_donation_path(donation), class: "us-don-button button-edit" %>
-						<%= link_to 'Deletar', donation, method: :delete, data: { confirm: 'Are you sure?' }, class: "us-don-button button-delete" %>
+						    <%= link_to 'Deletar', donation, method: :delete, data: { confirm: 'Tem certeza?'}, class: "us-don-button button-delete" %>
 		        	</div>
 				</div>
 			<% end %>
